Closed Bug 322947 Opened 20 years ago Closed 20 years ago

Page scrolls up when clicking the middle mouse button in frame

Categories

(Core :: Widget: Win32, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: buchner.johannes, Assigned: emaijala+moz)

References

()

Details

(Keywords: regression, testcase)

Attachments

(2 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060110 Firefox/1.6a1 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060110 Firefox/1.6a1 When the middle button is clicked, the browser scrolls upwards Reproducible: Always Steps to Reproduce: 1. open site http://www.tv-testbild.com/ 2. go down 3. middle click on a free area inside the site Actual Results: the site is scrolled upwards Expected Results: there should be just the icon for scrolling No, it isn't a javascript, 'cause NoScript would be blocking it.
Blocks: 312566
Severity: minor → normal
Summary: Middle button click -> Site scrolls up → Page scrolls up when clicking the middle mouse button in frame
Version: unspecified → 1.5 Branch
Assignee: nobody → win32
Component: General → Widget: Win32
Product: Firefox → Core
QA Contact: general → ian
Version: 1.5 Branch → Trunk
Attached file testcase
I can reproduce this bug sometimes. I hope/think this testcase shows the issue. To reproduce: - Move over the green div. - Mouse down, the yellow div moves under the mouse Result: Sometimes, extra 'mousemove' numbers appear, and even more sometimes, they are red. When they are red, they correspond to event.clientY - offset of the mouse position of the green div. Same for the x value. If you don't see it happening right away, move the mouse again somewhere in the green div and try again. It should normally happen within 5 times.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: testcase
(In reply to comment #2) > Created an attachment (id=208139) [edit] > testcase > > I can reproduce this bug sometimes. > I hope/think this testcase shows the issue. > > To reproduce: > - Move over the green div. > - Mouse down, the yellow div moves under the mouse > > Result: > Sometimes, extra 'mousemove' numbers appear, and even more sometimes, they are > red. When they are red, they correspond to event.clientY - offset of the mouse > position of the green div. Same for the x value. > > If you don't see it happening right away, move the mouse again somewhere in the > green div and try again. It should normally happen within 5 times. > Seeing what you describe with Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8) Gecko/20060111 Firefox/1.5
Attached patch Patch v1Splinter Review
Patch v1. Disable MouseTrailer for the whole duration of the mouse event handling. This way it can't interfere in the middle of the popup window with the arrows being created. Fixes also one comment in MouseTrailer. Also works with all the testcases from previous regressions.
Assignee: win32 → emaijala
Status: NEW → ASSIGNED
Attachment #208214 - Flags: superreview?(roc)
Attachment #208214 - Flags: review?(roc)
Attachment #208214 - Flags: superreview?(roc)
Attachment #208214 - Flags: superreview+
Attachment #208214 - Flags: review?(roc)
Attachment #208214 - Flags: review+
Fix checked in to trunk.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: