Fix for bug 322947: Page scrolls up when clicking the middle mouse button in frame r+sr=roc